--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /TeamPi-TwitterHashtag/HashtagWebApp/bin/Debug/netcoreapp3.1
 /TeamPi-TwitterHashtag/HashtagWebApp/obj
 /TeamPi-TwitterHashtag/TwitterHashtag/.env
+/TeamPi-TwitterHashtag/HashtagAPI/obj/Debug/netcoreapp3.1
