Added Twitter Node project

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /TeamPi-TwitterHashtag/HashtagAPI/obj
 /TeamPi-TwitterHashtag/TwitterHashtag/bin
 /TeamPi-TwitterHashtag/TwitterHashtag/obj/Debug
+/TeamPi-TwitterHashtag/Twitter Hashtag Node/bin
+/TeamPi-TwitterHashtag/Twitter Hashtag Node/obj/Debug
