Updated appsettings for change in db connection

--- a/TeamPi-TwitterHashtag/HashtagWebApp/appsettings.json
+++ b/TeamPi-TwitterHashtag/HashtagWebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=fausoftwareengineeringteampi.database.windows.net;Initial Catalog=TeamPi-TwitterHashtag;User ID=teampi;Password=Hashtag#;Integrated Security=false;Persist Security Info=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
+    "DefaultConnection": "Data Source=teampitwitterhashtagdbserver.database.windows.net;Initial Catalog=TwitterHashtag-TwitterHashtag;User ID=tamapi;Password=Hashtag#;Integrated Security=false;Persist Security Info=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
   },
   "Logging": {
     "LogLevel": {
