--- a/TeamPi-TwitterHashtag/HashtagAPI/appsettings.json
+++ b/TeamPi-TwitterHashtag/HashtagAPI/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=fausoftwareengineeringteampi.database.windows.net;Initial Catalog=TwitterHashtag;User ID=teampi;Password=Hashtag#;Integrated Security=false;Persist Security Info=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
+    "DefaultConnection": null,
+    "DefaultConnection": "Data Source=teampitwitterhashtagdbserver.database.windows.net;Initial Catalog=TwitterHashtag-TwitterHashtag;User ID=tamapi;Password=Hashtag#;Integrated Security=false;Persist Security Info=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
   },
   "Logging": {
     "LogLevel": {
