--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,10 @@
 /TeamPi-TwitterHashtag/TwitterHashtag/obj/Debug
 /TeamPi-TwitterHashtag/Twitter Hashtag Node/bin
 /TeamPi-TwitterHashtag/Twitter Hashtag Node/obj/Debug
+/TeamPi-TwitterHashtag/Twitter Hashtag Node/node_modules
+/TeamPi-TwitterHashtag/Twitter Hashtag Node/.env
+/TeamPi-TwitterHashtag/HashtagAPI/bin/Release/netcoreapp3.1
+/TeamPi-TwitterHashtag/HashtagAPI/Properties/PublishProfiles
+/TeamPi-TwitterHashtag/Twitter Hashtag Node/obj/Release
+/TeamPi-TwitterHashtag/Twitter Hashtag Node/test.js
+/TeamPi-TwitterHashtag/Twitter Hashtag Node/serverCopy.js
