--- a/TeamPi-TwitterHashtag/Twitter Hashtag Node/package.json
+++ b/TeamPi-TwitterHashtag/Twitter Hashtag Node/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "twitter-hashtag-node",
-  "version": "0.0.0",
-  "description": "Twitter Hashtag Node",
-  "scripts": {
-    "start": "node server"
-  },
-  "engines": {
-    "node": "~6.10.x"
-  },
-  "author": {
-    "name": ""
+  "dependencies": {
+    "axios": "^0.20.0",
+    "candyman": "^0.1.86",
+    "cylon": "^1.3.0",
+    "cylon-gpio": "^0.30.1",
+    "cylon-i2c": "^0.26.1",
+    "cylon-raspi": "^0.20.1",
+    "dotenv": "^8.2.0",
+    "gulp": "^4.0.2",
+    "onoff": "^6.0.1",
+    "querystring": "^0.2.0",
+    "request": "^2.88.2",
+    "twitter": "^1.7.1"
   }
 }
