Register/verify email

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,11 @@
 /TeamPi-TwitterHashtag/Twitter Hashtag Node/obj/Release
 /TeamPi-TwitterHashtag/Twitter Hashtag Node/test.js
 /TeamPi-TwitterHashtag/Twitter Hashtag Node/serverCopy.js
+/TeamPi-TwitterHashtag/HashtagWebApp/bin/Release/netcoreapp3.1
+/TeamPi-TwitterHashtag/HashtagWebApp/bin/Release/netcoreapp3.1
+/TeamPi-TwitterHashtag/HashtagWebApp/Properties/PublishProfiles
+/TeamPi-TwitterHashtag/HashtagWebApp/bin/Release/netcoreapp3.1
+/TeamPi-TwitterHashtag/HashtagWebApp/bin/Release/netcoreapp3.1
+/TeamPi-TwitterHashtag/HashtagWebApp/bin/Release/netcoreapp3.1/cs
+/TeamPi-TwitterHashtag/HashtagWebApp/.config
+/TeamPi-TwitterHashtag/HashtagWebApp/appsettings.json
